--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -2,14 +2,14 @@ modLoader="javafml"
 loaderVersion="[36,)"
 
 license="MIT"
-issueTrackerURL="https://github.com/Hellish-Mods/hellishtemplate/issues"
+issueTrackerURL="https://github.com/Hellish-Mods/BlackMirrorJS/issues"
 
 [[mods]]
-modId="hellishtemplate"
+modId="blackmirrorjs"
 version="${file.jarVersion}"
 
-displayName="hellishtemplate"
-displayURL="https://www.curseforge.com/minecraft/mc-mods/hellishtemplate"
+displayName="BlackMirrorJS"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/blackmirrorjs"
 logoFile="pack.png"
 
 authors="Hellish Mods & Modern Modpacks"
@@ -17,19 +17,26 @@ credits="""
 G_cat (Coding)
 """
 
-description="hellishtemplate"
+description="Allows script devs to reflect potentially dangerous classes using a permission-based system"
 
-[[dependencies.hellishtemplate]]
+[[dependencies.blackmirrorjs]]
     modId="forge"
     mandatory=true
 
     versionRange="[36,)"
     ordering="NONE"
     side="BOTH"
-[[dependencies.hellishtemplate]]
+[[dependencies.blackmirrorjs]]
     modId="minecraft"
     mandatory=true
 
     versionRange="[1.16.5,1.17)"
+    ordering="NONE"
+    side="BOTH"
+[[dependencies.blackmirrorjs]]
+    modId="kubejs"
+    mandatory=true
+
+    versionRange=","
     ordering="NONE"
     side="BOTH"
